Refactor GetDesignacionDTO and DesignacionServiceImpl to simplify DTO construction and remove unnecessary designados handling